Update navigation links in signal inputs component to point to Effects and Signal Models pages.

--- a/src/app/pages/signal-inputs/signal-inputs.component.html
+++ b/src/app/pages/signal-inputs/signal-inputs.component.html
@@ -156,7 +156,7 @@
   </div>
 
   <div class="navigation-links">
-    <a [routerLink]="['/signal-basics']">← Signal Basics</a>
-    <a [routerLink]="['/computed-signals']">Computed Signals →</a>
+    <a [routerLink]="['/effect']">← Effects</a>
+    <a [routerLink]="['/signal-models']">Signal Models →</a>
   </div>
 </div> 
